@@ -1,4 +1,5 @@
 *~
+*.exe
 *.o
 *.1
 *.spec
