@@ -314,3 +314,5 @@
 2016-12-07 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored 'configure.ac' to use PKG_CHECK_MODULE() wherever
 	possible.
+2016-12-07 Fred Gleason <fredg@paravelsystems.com>
+	* Modified build system to work under MinGW32.
